Apply new tree traversal logic